icons changed from .png to .svg; menu fix on mobile and tablet view + other minor fixes

--- a/SASS/_basic.scss
+++ b/SASS/_basic.scss
@@ -12,7 +12,7 @@
 
 .title-h2 {
     text-align: center;
-    margin-bottom: 38px;
+    margin-bottom: 25px;
     border-bottom: 1px solid #000;
     border-radius: 10%;
     padding-bottom: 8px;
