--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -18,8 +18,10 @@
     }
 }
 
-.flex-container {
-    display: flex;
+@media(min-width: 1025px) {
+    .flex-container {
+        display: flex;
+    }
 }
 
 
@@ -255,7 +257,7 @@
     box-shadow: none;
 
     &__school {
-        margin-bottom: 80px;
+        margin-bottom: 60px;
         text-align: center;
     }
 
@@ -267,6 +269,11 @@
         flex-basis: 50%;
         background-color: #c7c7c7;
         box-shadow: 0 0 8px 0 rgb(136, 127, 127);
+
+        &__school {
+            margin-bottom: 80px;
+            text-align: center;
+        }
     }
 }
 
@@ -281,12 +288,12 @@
         list-style: none;
     }
 
-    &__text {
-        font-size: 28px;
-    }
-
     @media(min-width: 1025px) {
         flex-basis: 50%;
+
+        &__text {
+            font-size: 28px;
+        }
     }
 }
 
@@ -302,6 +309,8 @@
     box-shadow: none;
 
     .nav {
+        width: 100%;
+        flex-wrap: wrap;
 
         &__list {
             display: flex;
@@ -324,7 +333,7 @@
             display: flex;
             flex-direction: column;
             text-decoration: none;
-            margin-bottom: 52px;
+            margin-bottom: 45px;
         }
 
         &__image {
@@ -345,7 +354,6 @@
 
 
         @media(min-width: 1025px) {
-            width: 100%;
 
             &__item {
                 flex-basis: 25%;
@@ -358,7 +366,6 @@
 
             &__link {
                 margin: 100px;
-
 
                 &:hover .nav__image {
                     transform: scale(1.2);
